rough code for grid-grid force calculation

--- a/notes.org
+++ b/notes.org
@@ -1,6 +1,6 @@
 * TODO active
 ** make rigid body object device pointer
-
+** branch rb-device: have RBType objects hold device pointers for raw RigidBodyGrids
 
 
 * organization
