code appears to work; much to be done; force evaluation, integration need to be tested

--- a/notes.org
+++ b/notes.org
@@ -2,6 +2,13 @@
 ** make rigid body object device pointer
 ** branch rb-device: have RBType objects hold device pointers for raw RigidBodyGrids
 
+* TODO eventually
+** read restart file
+** multiple "PMF" grids associated with each RB type
+** each RB gets temperature from grid
+** optionally don't eval forces every ts
+
+
 
 * organization
 ** RgidBodyController (RBC) holds device pointers, manages force evaluation and integration
