fixed bug involving grid transformations before force calculation; still something is wrong

--- a/notes.org
+++ b/notes.org
@@ -1,5 +1,5 @@
 * TODO active
-** fix ComputeGridGrid.cuh to include transformation?
+** fix ComputeGridGrid.cuh to include transformation of pmf/potential grids?
 
 
 * TODO eventually
