--- a/README
+++ b/README
@@ -49,6 +49,10 @@ mkdir output
 
 You may use the '-g n' option to specify the n-th GPU on your machine, counting from 0.
 
+If you fail to compile and link the applications, we recommend running
+`make clean` to remove object files. Sometimes we have encountered
+CUDA related errors in binaries built in a "dirty" environement.
+
 
 /========\
 | Citing |
@@ -85,3 +89,38 @@ Max Belkin
 Emmanual Guzman
 Justin Dufresne
 Terrance Howard
+
+
+/====================\
+| Outstanding issues |
+\====================/
+
+-- Features disabled during port to GPUs --
+
+* Energy calculations are currently disabled
+
+* Constant chemical potential simulations
+
+-- Not implemented --
+
+* Periodic boundaries are not handled by rigid body objects, so
+  simulations using these should only be performed for effectively
+  infinite systems
+
+* There are no checks to ensure that pairlists are recalculated before
+  particles further than the pairlist distance move to within the
+  cutoff
+
+-- Bugs --
+
+* An issue with memory management causes some invalid memory to be
+  freed when the simulations end, cuasing a seg-fault; the impact of
+  this bug is mitigated because output has already been written at
+  this time
+
+* A large amount of GPU memory for pairlists is allocated statically,
+  which may cause out-of-memory crashes in older hardware
+
+* If the number of pairs in the sytem exceeds the length of the array
+  allocated for pairlists, the non-bonded kernel will try to access
+  forbidden regions of memory, causing a crash
