--- a/README
+++ b/README
@@ -111,9 +111,6 @@ Terrance Howard
   particles further than the pairlist distance move to within the
   cutoff
 
-* Failed assertions deliver messages that don't describe where the
-  failure occured
-
 -- Bugs --
 
 * An issue with memory management causes some invalid memory to be
@@ -124,6 +121,6 @@ Terrance Howard
 * A large amount of GPU memory for pairlists is allocated statically,
   which may cause out-of-memory crashes in older hardware
 
-* If the number of pairs in the sytem exceeds the length of the array
+* If the number of pairs in the system exceeds the length of the array
   allocated for pairlists, the non-bonded kernel will try to access
   forbidden regions of memory, causing a crash
